[package]
name = "line-bot-example-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-http = "3"
serde = { version = "1", features = ["derive"] }
awc = { version = "3.0.0", features = ["rustls"] }
rustls = "0"
actix-rt = "1"
validator = { version = "0", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0", default-features = false, features = ["std"] }
hmac = "0"
sha2 = "0"
hex-literal = "0"
async-trait = "0"
futures = "0"
base64="0"