[package]
name = "line_bot_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
actix-http = "3.3"
serde = { version = "1.0", features = ["derive"] }
awc = { version = "3.1", features = ["rustls"] }
rustls = "0.20"
actix-rt = "2.8"
validator = { version = "0.16", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
hex-literal = "0.3"
async-trait = "0.1"
futures = "0.3"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
typed-builder = "0.14"
serde_urlencoded = "0.7"
chrono = "0.4"
josekit = "0.8"
thiserror = "1.0"
